
= raabro CHANGELOG.txt


== raabro 1.0.5  not yet released


== raabro 1.0.4  released 2015-09-24

- provide a default .rewrite implementation


== raabro 1.0.3  released 2015-09-23

- drop the shrink! concept


== raabro 1.0.2  released 2015-09-23

- don't let parse() shrink tree when prune: false
- let parse() return tree anyway when prune: false
- add parse(s, rewrite: false) option


== raabro 1.0.1  released 2015-09-23

- take last parser as default :root
- provide default .parse for modules including Raabro


== raabro 1.0.0  released 2015-09-23

- first complete (hopefully) release


== raabro 0.9.0

- initial push to RubyGems
